--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nanoid": "^5.1.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "tailwindcss": "^4.1.12"
   },
