--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
+    "check:ts": "tsc --noEmit",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "format": "prettier -w \"src/**/*.{ts,tsx,css,md}\"",
     "prepare": "husky"
@@ -46,6 +47,9 @@
     "src/**/*.{ts,tsx,css,md}": [
       "prettier --write",
       "eslint --fix"
+    ],
+    "src/**/*.{ts,tsx}": [
+      "tsc --noEmit"
     ]
   }
 }
