--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,10 @@
     "paths": {
       "@/*": ["src/*"],
       "@store/*": ["src/store/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@config/*": ["src/config/*"],
+      "@lib/*": ["src/lib/*"]
     }
   },
   "include": ["src"]
